--- a/pom.xml
+++ b/pom.xml
@@ -183,11 +183,6 @@
                 <artifactId>org.wso2.carbon.registry.core</artifactId>
                 <version>${carbon.kernel.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.wso2.carbon</groupId>
-                <artifactId>org.wso2.carbon.statistics.ui</artifactId>
-                <version>${carbon.kernel.version}</version>
-            </dependency>
 
             <!--Carbon orbit-->
             <dependency>
@@ -213,47 +208,6 @@
             <dependency>
                 <groupId>org.apache.axis2.wso2</groupId>
                 <artifactId>axis2</artifactId>
-                <version>${axis2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.axis2.wso2</groupId>
-                <artifactId>axis2-jibx</artifactId>
-                <version>${axis2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.derby.wso2</groupId>
-                <artifactId>derby</artifactId>
-                <version>${apache.derby.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate.wso2</groupId>
-                <artifactId>hibernate</artifactId>
-                <version>${hibernate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.bcel.wso2</groupId>
-                <artifactId>bcel</artifactId>
-                <version>${bcel.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>asm.wso2</groupId>
-                <artifactId>asm</artifactId>
-                <version>${asm.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cglib.wso2</groupId>
-                <artifactId>cglib</artifactId>
-                <version>${cglib.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jibx.wso2</groupId>
-                <artifactId>jibx</artifactId>
-                <version>${jibx.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.axis2.wso2</groupId>
-                <artifactId>axis2-jaxbri</artifactId>
                 <version>${axis2.version}</version>
             </dependency>
             <dependency>
@@ -297,56 +251,13 @@
 
 
             <!--Third party-->
-            <dependency>
-                <groupId>org.eclipse.osgi</groupId>
-                <artifactId>org.eclipse.osgi</artifactId>
-                <version>${version.equinox.osgi}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.equinox</groupId>
-                <artifactId>org.eclipse.equinox.jsp.jasper</artifactId>
-                <version>1.0.1.R33x_v20070816</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.equinox</groupId>
-                <artifactId>org.eclipse.equinox.http.helper</artifactId>
-                <version>1.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.osgi</groupId>
-                <artifactId>org.eclipse.osgi.services</artifactId>
-                <version>${version.equinox.osgi.services}</version>
-            </dependency>
+
             <dependency>
                 <groupId>org.eclipse.equinox</groupId>
                 <artifactId>javax.servlet</artifactId>
                 <version>${javax.servlet.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>org.apache.felix.framework</artifactId>
-                <version>1.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>org.apache.felix.main</artifactId>
-                <version>1.0.3</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>org.osgi.compendium</artifactId>
-                <version>1.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.equinox</groupId>
-                <artifactId>org.eclipse.equinox.http.servlet</artifactId>
-                <version>${version.equinox.http.servlet}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.equinox</groupId>
-                <artifactId>javax.servlet.jsp</artifactId>
-                <version>${javax.servlet.jsp.version}</version>
-            </dependency>
+
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
@@ -606,8 +517,8 @@
 
     <properties>
         <!--CEP versions-->
-        <jaggery.version>0.9.0-Alpha6</jaggery.version>
-        <jaggery.modules.version>0.9.0-Alpha6</jaggery.modules.version>
+        <jaggery.version>0.9.0</jaggery.version>
+        <jaggery.modules.version>0.9.0</jaggery.modules.version>
         <carbon.deployment.version>4.3.0</carbon.deployment.version>
         <carbon.commons.version>4.3.2</carbon.commons.version>
         <carbon.identity.version>4.3.1</carbon.identity.version>
@@ -615,7 +526,7 @@
         <carbon.storagemgt.version>4.3.0</carbon.storagemgt.version>
         <carbon.multitenancy.version>4.3.0</carbon.multitenancy.version>
         <carbon.governance.version>4.3.0</carbon.governance.version>
-        
+        <!---->
         <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
         <carbon.event-processing.version>2.0.1</carbon.event-processing.version>
@@ -628,14 +539,9 @@
 
         <!--WSO2 versions-->
         <rampart.wso2.version>1.6.1.wso2v13</rampart.wso2.version>
-        <bcel.version>5.2.0.wso2v1</bcel.version>
-        <asm.version>3.1.wso2v1</asm.version>
-        <cglib.version>2.2.wso2v1</cglib.version>
-        <axis2.jibx.version>1.6.0.wso2v1</axis2.jibx.version>
-        <jibx.version>1.2.1.wso2v1</jibx.version>
-        <axis2.jaxb.version>1.6.0.wso2v1</axis2.jaxb.version>
         <axis2.version>1.6.1.wso2v11</axis2.version>
         <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
+
         <version.commons.logging>1.1</version.commons.logging>
         <log4j.wso2.version>1.2.17.wso2v1</log4j.wso2.version>
         <test.framework.version>4.3.1</test.framework.version>
@@ -644,14 +550,7 @@
         <httpcore.wso2.version>4.3.3.wso2v1</httpcore.wso2.version>
 
         <javax.servlet.version>3.0.0.v201112011016</javax.servlet.version>
-        <version.equinox.osgi>3.8.1.v20120830-144521</version.equinox.osgi>
         <emma.version>2.1.5320</emma.version>
-        <javax.servlet.jsp.version>2.0.0.v200706191603</javax.servlet.jsp.version>
-        <version.equinox.http.servlet>2.2.2</version.equinox.http.servlet>
-        <apache.derby.version>10.3.2.1wso2v1</apache.derby.version>
-        <version.equinox.osgi.services>3.3.100.v20120522-1822</version.equinox.osgi.services>
-        <hibernate.version>3.2.5.ga-wso2v1</hibernate.version>
-        <test-automation-framework-version>4.3.0-SNAPSHOT</test-automation-framework-version>
 
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
