--- a/pom.xml
+++ b/pom.xml
@@ -479,8 +479,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -500,6 +500,49 @@
                 <version>2.4</version>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-scr-plugin</artifactId>
+                    <version>1.7.2</version>
+                    <executions>
+                        <execution>
+                            <id>generate-scr-scrdescriptor</id>
+                            <goals>
+                                <goal>scr</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.3.5</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <obrRepository>NONE</obrRepository>
+                        <!--<instructions>
+                          <_include>-osgi.bnd</_include>
+                        </instructions>-->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>1.7</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-eclipse-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <profiles>
         <profile>
@@ -541,36 +584,37 @@
 
     <properties>
         <!--CEP versions-->
-        <jaggery.version>0.9.0</jaggery.version>
+        <!--<jaggery.version>0.9.0</jaggery.version>-->
         <jaggery.modules.version>1.2.0</jaggery.modules.version>
-        <carbon.deployment.version>4.3.1</carbon.deployment.version>
-        <carbon.commons.version>4.3.4</carbon.commons.version>
-        <carbon.analytics-common.version>1.0.0-SNAPSHOT</carbon.analytics-common.version>
-        <carbon.identity.version>4.3.2</carbon.identity.version>
-        <carbon.registry.version>4.3.0</carbon.registry.version>
+        <carbon.deployment.version>4.4.0</carbon.deployment.version>
+        <carbon.commons.version>4.4.0</carbon.commons.version>
+        <carbon.analytics-common.version>1.0.0</carbon.analytics-common.version>
+        <carbon.identity.version>4.4.0</carbon.identity.version>
+        <carbon.registry.version>4.4.1</carbon.registry.version>
         <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
-        <carbon.multitenancy.version>4.3.4</carbon.multitenancy.version>
-        <carbon.governance.version>4.3.0</carbon.governance.version>
+        <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
+        <carbon.governance.version>4.4.0</carbon.governance.version>
 
         <!--<siddhi.version>3.</siddhi.version>-->
         <cep.version>4.0.0-SNAPSHOT</cep.version>
         <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
-        <carbon.kernel.version>4.3.0</carbon.kernel.version>
+        <carbon.kernel.version>4.4.0</carbon.kernel.version>
         <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
         <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
+        <test.framework.version>4.3.1</test.framework.version>
+        <test.framework.util.version>4.3.0</test.framework.util.version>
+
         <carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
 
         <!--WSO2 versions-->
         <stratos.ui.version>2.2.0</stratos.ui.version>
         <rampart.wso2.version>1.6.1-wso2v14</rampart.wso2.version>
-        <axis2.version>1.6.1.wso2v11</axis2.version>
-        <orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
+        <axis2.version>1.6.1.wso2v12</axis2.version>
+        <orbit.version.axiom>1.2.11.wso2v6</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
         <log4j.wso2.version>1.2.17.wso2v1</log4j.wso2.version>
-        <test.framework.version>4.3.1</test.framework.version>
-        <test.framework.util.version>4.3.0</test.framework.util.version>
         <httpclient.wso2.version>4.2.5.wso2v1</httpclient.wso2.version>
         <httpcore.wso2.version>4.3.3.wso2v1</httpcore.wso2.version>
 
