--- a/modules/integration/tests-integration/tests/pom.xml
+++ b/modules/integration/tests-integration/tests/pom.xml
@@ -372,8 +372,8 @@
             <artifactId>org.wso2.carbon.databridge.agent</artifactId>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.wso2.carbon.analytics-common</groupId>-->
-            <!--<artifactId>org.wso2.carbon.databridge.agent.thrift</artifactId>-->
+        <!--<groupId>org.wso2.carbon.analytics-common</groupId>-->
+        <!--<artifactId>org.wso2.carbon.databridge.agent.thrift</artifactId>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.wso2.carbon.analytics-common</groupId>
@@ -416,6 +416,11 @@
         <dependency>
             <groupId>org.eclipse.paho</groupId>
             <artifactId>mqtt-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.2.147</version>
         </dependency>
     </dependencies>
 
