--- a/modules/samples/producers/jms-client/build.xml
+++ b/modules/samples/producers/jms-client/build.xml
@@ -28,6 +28,7 @@
     <property name="format" value=""/>
     <property name="filePath" value=""/>
     <property name="streamId" value=""/>
+    <property name="broker" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
@@ -81,6 +82,7 @@
             <arg value="${format}"/>
             <arg value="${filePath}"/>
             <arg value="${streamId}"/>
+            <arg value="${broker}"/>
         </java>
     </target>
 
