--- a/modules/samples/producers/http/build.xml
+++ b/modules/samples/producers/http/build.xml
@@ -35,7 +35,7 @@
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
         <fileset dir="${lib.dir}"/>
-        <fileset dir="${cep.home}/repository/components/plugins/">
+        <fileset dir="${carbon.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
             <include name="commons-pool_*.jar"/>
             <include name="httpclient_*.jar"/>
