--- a/modules/samples/producers/jms-client/build.xml
+++ b/modules/samples/producers/jms-client/build.xml
@@ -27,28 +27,18 @@
     <property name="topic" value=""/>
     <property name="format" value=""/>
     <property name="filePath" value=""/>
-    <property name="streamId" value=""/>
     <property name="broker" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
+        <fileset dir="${lib.dir}"/>
         <fileset dir="${carbon.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
-            <include name="commons-pool_*.jar"/>
-            <include name="com.google.gson_*.jar"/>
-            <include name="httpclient_*.jar"/>
-            <include name="libthrift_*.jar"/>
+
             <include name="slf4j.log4j12_*.jar"/>
             <include name="slf4j.api_*.jar"/>
-            <include name="json_*.jar"/>
-            <include name="disruptor_*.jar"/>
-            <include name="org.wso2.carbon.databridge.agent_*.jar"/>
-            <include name="org.wso2.carbon.databridge.commons.thrift_*.jar"/>
-            <include name="org.wso2.carbon.databridge.commons.binary_*.jar"/>
-            <include name="org.wso2.carbon.databridge.commons_*.jar"/>
-        </fileset>
-        <fileset dir="${lib.dir}"/>
 
+        </fileset>
     </path>
 
     <target name="clean">
@@ -74,14 +64,13 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo>Configure -Dtopic=xxxx and ( -Dsn='sample number' or -DfilePath=xxxx ) optionally use -Dprotocol='thrift/binary' -Dhost=xxxx -Dport=xxxx -Dusername=xxxx -Dpassword=xxxx  -Devents=xx -Ddelay='delay between events in ms' </echo>
+        <echo>Configure -Dtopic=xxxx -Dformat=xxxx(csv, text, json, xml) -Dbroker=xxxx(activemq, mb, qpid), (-Dsn='sample number' or -DfilePath=xxxx)</echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${sn}"/>
             <arg value="${topic}"/>
             <arg value="${format}"/>
             <arg value="${filePath}"/>
-            <arg value="${streamId}"/>
             <arg value="${broker}"/>
         </java>
     </target>
