--- a/modules/samples/producers/jms-client/src/main/resources/qpid.properties
+++ b/modules/samples/producers/jms-client/src/main/resources/qpid.properties
@@ -16,12 +16,5 @@
 # under the License.
 #
 
-java.naming.factory.initial = org.apache.activemq.jndi.ActiveMQInitialContextFactory
-#java.naming.factory.initial =org.apache.qpid.jndi.PropertiesFileInitialContextFactory
-#
-#use the following property to configure the default connector
-#connectionfactory.ConnectionFactory=amqp://admin:admin@clientid/carbon?brokerlist='tcp://localhost:5673'
-
-# use the following property to specify the JNDI name the connection factory
-# should appear as.
-#connectionFactoryNames = connectionFactory, queueConnectionFactory, topicConnectionFactory
+java.naming.factory.initial = org.apache.qpid.jndi.PropertiesFileInitialContextFactory
+connectionfactory.qpidConnectionFactory = amqp://admin:admin@clientid/default?brokerlist='tcp://localhost:5672'
