--- a/modules/samples/producers/soap-client/build.xml
+++ b/modules/samples/producers/soap-client/build.xml
@@ -24,7 +24,7 @@
     <property name="temp.dir" value="temp"/>
     <property name="lib.dir" value="../../lib"/>
     <property name="class.dir" value="${temp.dir}/classes"/>
-    <property name="main-class" value="org.wso2.carbon.sample.http.Soap"/>
+    <property name="main-class" value="org.wso2.carbon.sample.soap.Soap"/>
     <property name="username" value="admin"/>
     <property name="password" value="admin"/>
 
@@ -35,7 +35,7 @@
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
         <fileset dir="${lib.dir}"/>
-        <fileset dir="${cep.home}/repository/components/plugins/">
+        <fileset dir="${carbon.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
             <include name="commons-pool_*.jar"/>
             <include name="httpclient_*.jar"/>
@@ -84,10 +84,10 @@
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${url}"/>
-            <arg value="${username}"/>
-            <arg value="${password}"/>
             <arg value="${sn}"/>
             <arg value="${filePath}"/>
+            <arg value="${username}"/>
+            <arg value="${password}"/>
         </java>
     </target>
 
