--- a/modules/samples/consumers/jms/build.xml
+++ b/modules/samples/consumers/jms/build.xml
@@ -20,20 +20,26 @@
     <property name="src.dir" value="src/main/java"/>
     <property name="resources.dir" value="src/main/resources"/>
     <property name="temp.dir" value="temp"/>
-    <property name="lib.dir" value="../../lib"/>
     <property name="class.dir" value="${temp.dir}/classes"/>
+    <property name="main-class" value="org.wso2.carbon.sample.consumer.JMSClient"/>
+    <property name="lib.dir" value="../../lib"/>
 
-    <property name="topic" value="BasicStockQuotes"/>
-    <property name="queue" value="DelayedFlightStats"/>
+
+    <property name="broker" value=""/>
+    <property name="topic" value=""/>
+    <property name="queue" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
         <fileset dir="${lib.dir}"/>
+        <fileset dir="${carbon.home}/repository/components/plugins/">
+            <include name="org.wso2.carbon.logging_*.jar"/>
+            <include name="slf4j.log4j12_*.jar"/>
+            <include name="slf4j.api_*.jar"/>
+        </fileset>
     </path>
 
-
     <target name="clean">
-        <!--<delete dir="target" quiet="true"/>-->
         <delete dir="${class.dir}" quiet="true"/>
         <delete dir="${temp.dir}"/>
     </target>
@@ -56,28 +62,11 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo>To configure topic use -Dtopic=xxxx</echo>
-        <echo>Subscribing to : ${topic}</echo>
-        <java classname="org.wso2.carbon.sample.consumer.JMSTopicMessageConsumer"
+        <echo>Configure -Dbroker and (-DtopicName=xxxx or -DqueueName)</echo>
+        <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
+            <arg value="${broker}"/>
             <arg value="${topic}"/>
-        </java>
-    </target>
-
-    <target name="topicConsumer" depends="compile">
-        <echo>To configure topic use -Dtopic=xxxx</echo>
-        <echo>Subscribing to : ${topic}</echo>
-        <java classname="org.wso2.carbon.sample.consumer.JMSTopicMessageConsumer"
-              classpathref="javac.classpath" fork="true">
-            <arg value="${topic}"/>
-        </java>
-    </target>
-
-    <target name="queueConsumer" depends="compile">
-        <echo>To configure queue use -Dqueue=xxxx</echo>
-        <echo>Subscribing to : ${queue}</echo>
-        <java classname="org.wso2.carbon.sample.consumer.JMSQueueMessageConsumer"
-              classpathref="javac.classpath" fork="true">
             <arg value="${queue}"/>
         </java>
     </target>
