--- a/modules/samples/utils/output-websocket-local-adapter/build.xml
+++ b/modules/samples/utils/output-websocket-local-adapter/build.xml
@@ -14,10 +14,11 @@
   -->
 <project default="copy">
 
-    <property name="sample.axis2.repo.webapps" value="../../artifacts/${sampleNumber}/webapps"/>
+    <property name="sample.axis2.repo.webapps" value="../../artifacts/${sn}/webapps"/>
     <property name="default.axis2.repo.webapps" value="../../../repository/deployment/server/webapps"/>
 
     <target name="copy">
+        <echo> Configure sample number by -Dsn=xxxx </echo>
         <copy todir="${sample.axis2.repo.webapps}" overwrite="true">
             <fileset dir="${default.axis2.repo.webapps}">
                 <include name="outputwebsocket.war"/>
