--- a/modules/samples/producers/websocket-server/build.xml
+++ b/modules/samples/producers/websocket-server/build.xml
@@ -1,17 +1,21 @@
 <!--
-  ~ Copyright (c) 2005 - 2014, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+  ~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
   ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
-  ~ use this file except in compliance with the License. You may obtain a copy
-  ~ of the License at
+  ~ WSO2 Inc. licenses this file to you under the Apache License,
+  ~ Version 2.0 (the "License"); you may not use this file except
+  ~ in compliance with the License.
+  ~ You may obtain a copy of the License at
   ~
   ~ http://www.apache.org/licenses/LICENSE-2.0
   ~
-  ~ Unless required by applicable law or agreed to in writing, software distributed
-  ~ under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
-  ~ CONDITIONS OF ANY KIND, either express or implied.  See the License for the
-  ~ specific language governing permissions and limitations under the License.
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
   -->
+
 <project default="run">
 
     <property name="carbon.home" value="../../.."/>
@@ -20,36 +24,18 @@
     <property name="temp.dir" value="temp"/>
     <property name="class.dir" value="${temp.dir}/classes"/>
     <property name="main-class" value="org.wso2.carbon.sample.websocket.WebSocketServer"/>
+    <property name="lib.dir" value="../../lib"/>
 
-    <property name="protocol" value="thrift"/>
-    <property name="host" value="localhost"/>
-    <property name="port" value="7611"/>
-    <property name="username" value="admin"/>
-    <property name="password" value="admin"/>
-    <property name="events" value="100"/>
-    <property name="delay" value="1000"/>
 
-    <property name="streamId" value=""/>
     <property name="sn" value=""/>
+    <property name="topic" value=""/>
+    <property name="format" value=""/>
     <property name="filePath" value=""/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
-        <fileset dir="${carbon.home}/repository/components/plugins/">
-            <include name="org.wso2.carbon.logging_*.jar"/>
-            <include name="commons-pool_*.jar"/>
-            <include name="com.google.gson_*.jar"/>
-            <include name="httpclient_*.jar"/>
-            <include name="libthrift_*.jar"/>
-            <include name="slf4j.log4j12_*.jar"/>
-            <include name="slf4j.api_*.jar"/>
-            <include name="json_*.jar"/>
-            <include name="disruptor_*.jar"/>
-            <include name="org.wso2.carbon.databridge.agent_*.jar"/>
-            <include name="org.wso2.carbon.databridge.commons.thrift_*.jar"/>
-            <include name="org.wso2.carbon.databridge.commons.binary_*.jar"/>
-            <include name="org.wso2.carbon.databridge.commons_*.jar"/>
-        </fileset>
+        <fileset dir="${lib.dir}"/>
+        <fileset dir="lib"/>
     </path>
 
     <target name="clean">
@@ -73,22 +59,18 @@
             </fileset>
         </copy>
     </target>
-
     <target name="run" depends="compile">
-        <echo>Configure -DstreamId=xxxx:x.x.x and ( -Dsn='sample number' or -DfilePath=xxxx ) optionally use -Dprotocol='thrift/binary' -Dhost=xxxx -Dport=xxxx -Dusername=xxxx -Dpassword=xxxx  -Devents=xx -Ddelay='delay between events in ms' </echo>
+        <echo> Configure -Durl=xxxx -Dtopic=xxxx and (-DfilePath=xxxx and/or -Dsn='sample number') </echo>
         <java classname="${main-class}"
-              classpathref="javac.classpath" fork="true">
-            <arg value="${protocol}"/>
-            <arg value="${host}"/>
-            <arg value="${port}"/>
-            <arg value="${username}"/>
-            <arg value="${password}"/>
-            <arg value="${streamId}"/>
-            <arg value="${sn}"/>
+              classpathref="javac.classpath">
+            <!--<jvmarg value="-Xdebug" />-->
+            <!--<jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005" />-->
+            <arg value="${url}"/>
+            <arg value="${topic}"/>
             <arg value="${filePath}"/>
-            <arg value="${events}"/>
-            <arg value="${delay}"/>
+            <arg value="${sn}"/>
         </java>
+        <echo> Ended ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ </echo>
     </target>
 
 </project>
