--- a/modules/samples/consumers/jms/build.xml
+++ b/modules/samples/consumers/jms/build.xml
@@ -26,7 +26,7 @@
 
 
     <property name="broker" value=""/>
-    <property name="topic" value=""/>
+    <property name="topicName" value=""/>
     <property name="queue" value=""/>
 
     <path id="javac.classpath">
@@ -66,7 +66,7 @@
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${broker}"/>
-            <arg value="${topic}"/>
+            <arg value="${topicName}"/>
             <arg value="${queue}"/>
         </java>
     </target>
