--- a/modules/samples/producers/jms-client/build.xml
+++ b/modules/samples/producers/jms-client/build.xml
@@ -26,7 +26,7 @@
 
 
     <property name="sn" value=""/>
-    <property name="topic" value=""/>
+    <property name="topicName" value=""/>
     <property name="format" value=""/>
     <property name="filePath" value=""/>
     <property name="broker" value=""/>
@@ -70,7 +70,7 @@
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${sn}"/>
-            <arg value="${topic}"/>
+            <arg value="${topicName}"/>
             <arg value="${format}"/>
             <arg value="${filePath}"/>
             <arg value="${broker}"/>
